--- a/backend/package.json
+++ b/backend/package.json
@@ -8,16 +8,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "dotenv": "^16.3.1",
-    "firebase-admin": "^11.10.1",
-    "jsonwebtoken": "^9.0.2",
+    "@neondatabase/serverless": "^1.0.2",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.8.1",
-    "socket.io": "^4.7.2",
-    "nodemailer": "^6.9.4"
+    "firebase-admin": "^11.10.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^6.9.4",
+    "pg": "^8.16.3",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
