--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,11 @@
     "firebase-admin": "^11.10.1",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.4",
     "pg": "^8.16.3",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
