--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "buildCommand": "CI=false npm run build",
   "outputDirectory": "build",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/(.*)",
