--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public  # Commented out - we need frontend/public/index.html
 
 # Storybook build outputs
 .out
